# clipbox

./: Cargo.toml  LICENSE  Readme.md
src/: lib.rs  main.rs
src/linux/: x11.rs
