[package]
name = "clipbox"
description = "Cross-platform clipboard library."
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
# loki-linux = { path = "../../loki-chat/lokinit/loki-linux" }
loki-linux = { git = "https://github.com/loki-chat/lokinit.git", rev = "e9a6aea" }
